<resources>
    <string name="app_name">MyUOM</string>

    <string name="prompt_username">Όνομα Χρήστη</string>
    <string name="prompt_password">Συνθηματικό</string>
    <string name="action_sign_in">Σύνδεση</string>
    <string name="error_field_required">Πρέπει να συμπληρώσεις όλα τα πεδία</string>
    <string name="settings_text">Ρυθμίσεις</string>
    <string name="lastname_text">Επώνυμο: </string>
    <string name="firstname_text">Όνομα: </string>
    <string name="aem_text">AEM: </string>
    <string name="department_text">Τμήμα: </string>
    <string name="semester_text">Εξάμηνο: </string>
    <string name="direction_text">Κατεύθυνση: </string>
    <string name="address_text">Διεύθυνση: </string>
    <string name="changeAddress">Αλλαγή </string>
    <string name="notifications_text">Ειδοποιήσεις </string>
    <string name="notifications_time_text1">Να ειδοποιούμαι </string>
    <string name="notifications_time_text2">πριν το μάθημα </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="default_notification_channel_id">1</string>

    <string name="menu_uomNews">Νέα ΠαΜακ</string>
    <string name="menu_tweets">Tweets</string>
    <string name="menu_compus">Compus</string>
    <string name="menu_grades">Βαθμοί</string>
    <string name="menu_email">Email</string>
    <string name="menu_logout">Έξοδος</string>
    <string name="menu_settings">Ρυθμίσεις</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_program">Πρόγραμμα</string>
    <string name="add_event">Υπενθύμιση</string>
    <string name="empty_text">Δεν έχεις μάθημα σήμερα!</string>
    <string name="empty_text_grades">Δεν έχεις εγγραφεί σε μαθήματα</string>
    <string name="app_name_greek">Πανεπιστήμιο Μακεδονίας</string>
    <string name="no_internet_string">"Δεν υπάρχει σύνδεση στο Internet!</string>
    <string name="student_info">Στοιχεία Φοιτητή:</string>
    <string name="unpassedNumberString">Χρωστούμενα Μαθήματα:</string>
    <string name="notificationTitle">Ρυθμίσεις Ειδοποιήσεων</string>
    <string name="lesson">Μάθημα</string>
    <string name="semester">Εξάμηνο</string>
    <string name="empty_text_settings">Δεν χρωστάς κανενα μάθημα!</string>

</resources>
