<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_program"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_program" />
        <item
            android:id="@+id/nav_uomNews"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_uomNews" />
        <item
            android:id="@+id/nav_compus"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_compus" />
        <item
            android:id="@+id/nav_grades"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_grades" />
        <item
            android:id="@+id/nav_email"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_email" />
    </group>

    <item android:title="Λογαριασμος">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
